--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,10 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <script
+      src="https://kit.fontawesome.com/114dc5aaf3.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
